Pop up Creature template window on load instead of seperate tab
- Only one instance of template selector
- (UNFINISHED) label removed from Creature
- copyright in statusbar

--- a/TrinityCreator/CreatureCreatorPage.xaml
+++ b/TrinityCreator/CreatureCreatorPage.xaml
@@ -45,7 +45,7 @@
 
             <Button Content="Export to database" Click="exportDbBtn_Click" FontWeight="Bold" Margin="2" />
             <Button Content="Export to SQL file" Click="exportSqlBtn_Click" FontWeight="Bold" Margin="2" />
-            <Button Content="Create new creature" Click="newBtn_Click" Margin="2"/>
+            <Button Content="Create new creature from template" Click="newBtn_Click" Margin="2"/>
         </StackPanel>
 
         <ScrollViewer VerticalScrollBarVisibility="Auto">
