Creature bugs fixed
- Added creature_template_addon values
- Dead questgiver now uses dead emote
- more validation added
- default movement speed fixed... it was perfect for a horror game
though...
- InhabitType is a bitmask
- Random movement for enemy templates
- Exp added, always 2, modifies difficulty
- removed movementId, wrong field
- Added difficulty_entry_1-3 under advanced options
- stat modifiers for raid boss

--- a/TrinityCreator/CreatureCreatorPage.xaml
+++ b/TrinityCreator/CreatureCreatorPage.xaml
@@ -34,8 +34,8 @@
 
             <GroupBox Header="Advanced Options">
                 <StackPanel>
+                    <CheckBox Name="difficultyEntryCb" Content="Set Difficulty Entry" />
                     <CheckBox Name="customPetSpellCb" Content="Custom Pet Spell Data" ToolTip="By default an ID will be set based on creature family. Use CreatureSpellData.dbc as reference." />
-
                 </StackPanel>
             </GroupBox>
             <DockPanel>
@@ -153,6 +153,8 @@
                         </DockPanel>
                     </StackPanel>
                 </GroupBox>
+                <GroupBox Name="difficultyEntryGb" Header="Difficulty Entry" Content="{Binding DifficultyEntry, UpdateSourceTrigger=PropertyChanged}" 
+                                  Visibility="{Binding ElementName=difficultyEntryCb, Path=IsChecked, Converter={StaticResource ValueVisibilityConverter}}" />
 
                 <GroupBox Header="Death">
                     <StackPanel DockPanel.Dock="Left">
@@ -201,15 +203,13 @@
                         <DockPanel Margin="2">
                             <Label Content="Movement Type" DockPanel.Dock="Left" Width="120" />
                             <ComboBox Name="movementCb" SelectedValue="{Binding Movement}" />
-                        </DockPanel>
-                        <DockPanel Margin="2">
-                            <Label Content="Inhabit" DockPanel.Dock="Left" Width="120" />
-                            <ComboBox Name="inhabitCb" SelectedValue="{Binding Inhabit}" />
-                        </DockPanel>
+                        </DockPanel>                        
                         <DockPanel Margin="2">
                             <Label Content="Hover height" DockPanel.Dock="Left" Width="120" />
                             <TextBox Text="{Binding HoverHeight}" DockPanel.Dock="Left" ToolTip="Requires MOVEMENTFLAG_DISABLE_GRAVITY"/>
                         </DockPanel>
+                        <GroupBox Name="inhabitTypeGb" Header="Inhabit Type" Content="{Binding Inhabit, UpdateSourceTrigger=PropertyChanged}" />
+
                     </StackPanel>
                 </GroupBox>
                 <GroupBox Header="Function">
