Work on Lookup Tool
- Lookup buttons for creature
- Emote lookup added
- Lookup tool now larger by default
- Scrolling on lookuptool now works correctly
- Remember lookuptool width

--- a/TrinityCreator/LookupTool.xaml
+++ b/TrinityCreator/LookupTool.xaml
@@ -20,6 +20,7 @@
                     <ComboBoxItem Content="Creature" />
                     <ComboBoxItem Content="Game Object" />
                     <ComboBoxItem Content="Spell" />
+                    <ComboBoxItem Content="Emote" />
                 </ComboBox>
             </DockPanel>
             <DockPanel Margin="0,5,0,5">
