--- a/TrinityCreator/CreatureCreatorPage.xaml
+++ b/TrinityCreator/CreatureCreatorPage.xaml
@@ -61,6 +61,7 @@
                             <TextBox Text="{Binding Subname}" DockPanel.Dock="Left" />
                         </DockPanel>
                         <DockPanel Margin="2">
+                            <Button Content="Find Faction" Click="findFactionBtn_Click" Width="75" DockPanel.Dock="Right" Margin="2,0,0,0"/>
                             <Label Content="Faction" DockPanel.Dock="Left" Width="120" />
                             <TextBox Text="{Binding Faction}" DockPanel.Dock="Left" />
                         </DockPanel>
@@ -80,12 +81,14 @@
                             <Label Content="Pet Spell Data Id" DockPanel.Dock="Left" Width="120" />
                             <TextBox Text="{Binding PetDataId}" DockPanel.Dock="Left" />
                         </DockPanel>
+                        <Button Content="Find Model ID" Click="findCreatureBtn_Click" Margin="2"/>
                         <GroupBox Name="ModelIdGb" Header="Display IDs" Content="{Binding ModelIds, UpdateSourceTrigger=PropertyChanged}" />
                         <DockPanel Margin="2">
                             <Label Content="Mount Display ID" DockPanel.Dock="Left" Width="120" />
                             <TextBox Text="{Binding Mount}" DockPanel.Dock="Left" />
                         </DockPanel>
                         <DockPanel Margin="2">
+                            <Button Content="Find Emote" Click="findEmoteBtn_Click" Width="75" DockPanel.Dock="Right" Margin="2,0,0,0"/>
                             <Label Content="Repeat Emote" DockPanel.Dock="Left" Width="120" />
                             <TextBox Text="{Binding Emote}" DockPanel.Dock="Left" />
                         </DockPanel>
@@ -177,14 +180,17 @@
                             <Image Width="15" Source="Resources/copper.gif" Margin="0,0,10,0" />
                         </StackPanel>
                         <DockPanel Margin="2">
+                            <Button Content="Create Loot" Click="createLootBtn_Click" Width="75" DockPanel.Dock="Right" Margin="2,0,0,0"/>
                             <Label Content="Loot ID" DockPanel.Dock="Left" Width="120" />
                             <TextBox Text="{Binding LootId}" DockPanel.Dock="Left" />
                         </DockPanel>
                         <DockPanel Margin="2">
+                            <Button Content="Create Loot" Click="createLootBtn_Click" Width="75" DockPanel.Dock="Right" Margin="2,0,0,0"/>
                             <Label Content="Pickpocket Loot ID" DockPanel.Dock="Left" Width="120" />
                             <TextBox Text="{Binding PickpocketLoot}" DockPanel.Dock="Left" />
                         </DockPanel>
                         <DockPanel Margin="2">
+                            <Button Content="Create Loot" Click="createLootBtn_Click" Width="75" DockPanel.Dock="Right" Margin="2,0,0,0"/>
                             <Label Content="Skinning Loot ID" DockPanel.Dock="Left" Width="120" />
                             <TextBox Text="{Binding SkinLoot}" DockPanel.Dock="Left" />
                         </DockPanel>
