XmlKeyValue to replace seperate classes for cb values
Broken & needs work! Don't use this revision.

--- a/TrinityCreator/ItemPage.xaml
+++ b/TrinityCreator/ItemPage.xaml
@@ -13,7 +13,7 @@
                             ObjectType="{x:Type l:ItemClass}"
                             MethodName="GetClassList" />
         <ObjectDataProvider x:Key="SocketBonusList"
-                            ObjectType="{x:Type l:SocketBonus}"
+                            ObjectType="{x:Type l:XmlKeyValue}"
                             MethodName="GetBonusList" />
     </UserControl.Resources>
 
